--- a/index/index.html
+++ b/index/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<title>Document</title>
-</head>
-<body>
-	
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="../css/reset.css">
+		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<title>Vélos Fixie</title>
+	</head>
+	<body>
+		<header>
+			<a><img  alt="vélos"></a>
+			<nav>
+				<ul>
+					<li><a href="#">Vélos</a></li>
+					<li><a href="#">Customiser</a></li>
+					<li><a href="#">Accessoires</a></li>
+				</ul>
+			</nav>
+			<span><a href="#">Boutique</a></span>
+		</header>
+		<section>
+			<div class="test">
+				<div>
+					<div class="bikeContainer"><img class="bikeContainer-img" src="../images/fixie-6ku-bikes-shelby4.jpg" alt="vélos"></div>
+					<p class="ptest">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium distinctio at nam ullam, itaque voluptate. Doloremque itaque qui vero eum porro deserunt obcaecati consequuntur culpa tenetur ut dolore, amet minima?</p>
+					<span><a href="#">Acheter</a></span>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div>
+				<div>
+					<h3>Les principales</h3>
+					<h2>Caracteristiques</h2>
+				</div>
+				<div>
+					<img src="" alt="Vélos">
+				</div>
+				<!--- Surement quelques div pour les carac en hoover -->
+				<div>
+					<div><img src="" alt="Vélos"></div>
+					<div><img src="" alt="Vélos"></div>
+					<div><img src="" alt="Vélos"></div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod dolor, facere molestiae nisi quibusdam delectus cupiditate distinctio provident debitis dolorem alias reiciendis mollitia quaerat eos earum nostrum blanditiis culpa ipsum.</p>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div>
+				<div>
+					<h3>Des vélos à</h3>
+					<h2>Customiser</h2>
+					<div><img src=""></div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div>
+				<div>
+					<h3>Les indispensables</h3>
+					<h2>Accesoires</h2>
+				</div>
+				<div>
+					<img src="" alt="Accesoires 1">
+					<h4>Title1</h4>
+					<span><a href="#">Acheter</a></span>
+				</div>
+				<div>
+					<img src="" alt="Accesoires 2">
+					<h4>Title2</h4>
+					<span><a href="#">Acheter</a></span>
+				</div>
+				<div>
+					<img src="" alt="Accesoires 3">
+					<h4>Title3</h4>
+					<span><a href="#">Acheter</a></span>
+				</div>				
+			</div>
+		</section>
+		<footer>
+		</footer>
+	</body>
 </html>
