--- a/index/index.html
+++ b/index/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="../css/font">
 		<link rel="stylesheet" type="text/css" href="../css/reset.css">
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<title>Vélos Fixie</title>
@@ -74,10 +75,25 @@
 					<img src="" alt="Accesoires 3">
 					<h4>Title3</h4>
 					<span><a href="#">Acheter</a></span>
-				</div>				
+				</div>
 			</div>
-		</section>
-		<footer>
-		</footer>
-	</body>
-</html>
+			<section>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+				<div><img src="" alt=""></div>
+			</section>
+			<footer>
+			</footer>
+		</body>
+	</html>
