--- a/index/index.html
+++ b/index/index.html
@@ -2,37 +2,43 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<!-- <link rel="stylesheet" type="text/css" href="../css/font.css"> -->
+		<link rel="stylesheet" type="text/css" href="../css/font.css">
 		<link rel="stylesheet" type="text/css" href="../css/reset.css">
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<title>Vélos Fixie</title>
 	</head>
 	<body>
-		<header>
-			<a><img  alt="vélos"></a>
-			<nav>
-				<ul>
-					<li><a href="#">Vélos</a></li>
-					<li><a href="#">Customiser</a></li>
-					<li><a href="#">Accessoires</a></li>
-				</ul>
-			</nav>
-			<span><a href="#">Boutique</a></span>
+		<div class="rectangle1"></div>
+		<div class="rectangle2"></div>
+		<div class="rectangle3"></div>
+		<header class="header">
+			<div class="headerContainer">
+				<a class="logo" href="#"><img class="logo-img" alt="logo fixie" title="Logo Fixie" src="../img/Logo_Fixie.svg"></a>
+				<nav class='mainNavigation'>
+					<ul class="mainNavigation-list">
+						<a class="mainNavigation-link" href="#"><li class="mainNavigation-item1">Caractéristique</li></a>
+						<a class="mainNavigation-link" href="#"><li class="mainNavigation-item2">Customisation</li></a>
+						<a class="mainNavigation-link" href="#"><li class="mainNavigation-item3">Accessoires</li></a>
+					</ul>
+				</nav>
+				<div class='overlay'></div>
+				<div class="buttonShop"><a class="buttonShop-link" href="#">Shop</a></div>
+			</div>
 		</header>
-		<section>
-			<div class="test">
-				<div>
-					<div class="bikeContainer"><img class="bikeContainer-img" src="../images/fixie-6ku-bikes-shelby4.jpg" alt="vélos"></div>
-					<p class="ptest">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium distinctio at nam ullam, itaque voluptate. Doloremque itaque qui vero eum porro deserunt obcaecati consequuntur culpa tenetur ut dolore, amet minima?</p>
-					<span><a href="#">Acheter</a></span>
+		<section class="history">
+			<div class="historyContainer">
+				<div class="bikeContainer"><img class="bikeContainer-img" src="../img/velo_1.png" alt="vélos"></div>
+				<div class="historyTextContainer">
+					<p class="historyText">Autrefois associé aux coursiers, le fixie fait son grand retour et envahit les rues de nos grandes villes ces dernières années<br /> <br />
+					Symbole d’une nouvelle culture urbaine cool et trendy, le fixie permet d’expérimenter des sensations différentes  en vélo.</p>
 				</div>
 			</div>
 		</section>
-		<section>
-			<div>
-				<div>
-					<h3>Les principales</h3>
-					<h2>Caracteristiques</h2>
+		<section class="featuresContainer">
+			<div class=featuresContains>
+				<div class="titleContains">
+					<span class="titleTypeContains"><h3 class="titleType">Les principales</h3></span>
+					<span><h2 class="titleFeature">Caracteristiques</h2></span>
 				</div>
 				<div>
 					<img src="" alt="Vélos">
@@ -77,23 +83,24 @@
 					<span><a href="#">Acheter</a></span>
 				</div>
 			</div>
-			<section>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-				<div><img src="" alt=""></div>
-			</section>
-			<footer>
-			</footer>
-		</body>
-	</html>
+		</section>
+		<section>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+			<div><img src="" alt=""></div>
+		</section>
+		<footer>
+		</footer>
+	</body>
+</html>
