--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
 				<a class="logo" href="#"><img class="logo-img" alt="logo fixie" title="Logo Fixie" src="../img/Logo_Fixie.svg"></a>
 				<nav class='mainNavigation'>
 					<ul class="mainNavigation-list">
-						<a class="mainNavigation-link" href="#"><li class="mainNavigation-item1">Caractéristique</li></a>
+						<a class="mainNavigation-link" href="#carac"><li class="mainNavigation-item1">Caractéristique</li></a>
 						<a class="mainNavigation-link" href="#"><li class="mainNavigation-item2">Customisation</li></a>
 						<a class="mainNavigation-link" href="#"><li class="mainNavigation-item3">Accessoires</li></a>
 					</ul>
@@ -26,81 +26,100 @@
 			</div>
 		</header>
 		<section class="history">
-			<div class="historyContainer">
-				<div class="bikeContainer"><img class="bikeContainer-img" src="../img/velo_1.png" alt="vélos"></div>
-				<div class="historyTextContainer">
-					<p class="historyText">Autrefois associé aux coursiers, le fixie fait son grand retour et envahit les rues de nos grandes villes ces dernières années<br /> <br />
-					Symbole d’une nouvelle culture urbaine cool et trendy, le fixie permet d’expérimenter des sensations différentes  en vélo.</p>
-				</div>
+			<!-- <div class="historyContainer"> -->
+			<div class="bikeContainer"><img class="bikeContainer-img" src="../img/velo_1.png" alt="vélos"></div>
+			<div class="historyTextContainer"></div>
+			<p class="historyText">Autrefois associé aux coursiers, le fixie fait son grand retour et envahit les rues de nos grandes villes ces dernières années<br /> <br />
+			Symbole d’une nouvelle culture urbaine cool et trendy, le fixie permet d’expérimenter des sensations différentes à vélo.</p>
+			<!-- </div> -->
+		<!-- /div> -->
+	</section>
+	<section class="featuresContainer" id="carac">
+		<div class=featuresContains>
+			<div class="titleTypeContains"><h3 class="titleType">Les principales</h3></div>
+			<div class="titleFeatureContains"><h2 class="titleFeature">Caractéristiques</h2></div>
+			<div class="bikeFeatureContains">
+				<img src="../img/velo_2.png" class="bikeFeatureContains-img" alt="Vélos">
+				<a href="#"><div class="details --1">
+					<p class="more">+</p>
+				</div></a>
+				<a href="#"><div class="details --2">
+					<p class="more">+</p>
+				</div></a>
+				<a href="#"><div class="details --3">
+					<p class="more">+</p>
+				</div></a>
+				<a href="#"><div class="details --4">
+					<p class="more">+</p>
+				</div></a>
+				<a href="#"><div class="details --5">
+					<p class="more">+</p>
+				</div></a>
+				<a href="#"><div class="details --6">
+					<p class="more">+</p>
+				</div></a>
 			</div>
-		</section>
-		<section class="featuresContainer">
-			<div class=featuresContains>
-				<div class="titleContains">
-					<span class="titleTypeContains"><h3 class="titleType">Les principales</h3></span>
-					<span><h2 class="titleFeature">Caracteristiques</h2></span>
-				</div>
-				<div>
-					<img src="" alt="Vélos">
-				</div>
-				<!--- Surement quelques div pour les carac en hoover -->
-				<div>
-					<div><img src="" alt="Vélos"></div>
-					<div><img src="" alt="Vélos"></div>
-					<div><img src="" alt="Vélos"></div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod dolor, facere molestiae nisi quibusdam delectus cupiditate distinctio provident debitis dolorem alias reiciendis mollitia quaerat eos earum nostrum blanditiis culpa ipsum.</p>
-				</div>
-			</div>
-		</section>
-		<section>
+		</div>
+	</section>
+	<section class="presentationFixieContainer">
+		<div>
+			<div class="presentationFixieImageContainer1"><img class="presentationImage" src="../img/photo_situation_1.jpg" alt="Vélos"></div>
+			<div class="presentationFixieImageContainer2"><img class="presentationImage" src="../img/photo_situation_2.jpg" alt="Vélos"></div>
+			<div class="presentationFixieImageContainer3"><img class="presentationImage" src="../img/photo_situation_3.jpg" alt="Vélos"></div>
+			<div class="rectanglePresentationFixie"></div>
+			<p class="presentationTextFixie">Design esthétique et épuré, le fixie s’est vu retiré de tout accessoire superflus comme le dérailleur, les vitesses mais également les freins pour les puristes. <br /><br />Autre atout, sa légèreté. Deux fois moins lourd qu’un Vélib’ il est également facile à entretenir.
+			</p>
+		</div>
+	</section>
+	<section>
+		<div>
 			<div>
-				<div>
-					<h3>Des vélos à</h3>
-					<h2>Customiser</h2>
-					<div><img src=""></div>
-				</div>
+				<h3>Des vélos à</h3>
+				<h2>Customiser</h2>
+				<div><img src=""></div>
 			</div>
-		</section>
-		<section>
+		</div>
+	</section>
+	<section>
+		<div>
 			<div>
-				<div>
-					<h3>Les indispensables</h3>
-					<h2>Accesoires</h2>
-				</div>
-				<div>
-					<img src="" alt="Accesoires 1">
-					<h4>Title1</h4>
-					<span><a href="#">Acheter</a></span>
-				</div>
-				<div>
-					<img src="" alt="Accesoires 2">
-					<h4>Title2</h4>
-					<span><a href="#">Acheter</a></span>
-				</div>
-				<div>
-					<img src="" alt="Accesoires 3">
-					<h4>Title3</h4>
-					<span><a href="#">Acheter</a></span>
-				</div>
+				<h3>Les indispensables</h3>
+				<h2>Accesoires</h2>
 			</div>
-		</section>
-		<section>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-			<div><img src="" alt=""></div>
-		</section>
-		<footer>
-		</footer>
-	</body>
+			<div>
+				<img src="" alt="Accesoires 1">
+				<h4>Title1</h4>
+				<span><a href="#">Acheter</a></span>
+			</div>
+			<div>
+				<img src="" alt="Accesoires 2">
+				<h4>Title2</h4>
+				<span><a href="#">Acheter</a></span>
+			</div>
+			<div>
+				<img src="" alt="Accesoires 3">
+				<h4>Title3</h4>
+				<span><a href="#">Acheter</a></span>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+		<div><img src="" alt=""></div>
+	</section>
+	<footer>
+	</footer>
+</body>
 </html>
