--- a/index/index.html
+++ b/index/index.html
@@ -32,92 +32,75 @@
 			<p class="historyText">Autrefois associé aux coursiers, le fixie fait son grand retour et envahit les rues de nos grandes villes ces dernières années<br /> <br />
 			Symbole d’une nouvelle culture urbaine cool et trendy, le fixie permet d’expérimenter des sensations différentes à vélo.</p>
 			<!-- </div> -->
-		<!-- /div> -->
-	</section>
-	<section class="featuresContainer" id="carac">
-		<div class=featuresContains>
-			<div class="titleTypeContains"><h3 class="titleType">Les principales</h3></div>
-			<div class="titleFeatureContains"><h2 class="titleFeature">Caractéristiques</h2></div>
-			<div class="bikeFeatureContains">
-				<img src="../img/velo_2.png" class="bikeFeatureContains-img" alt="Vélos">
-				<a href="#"><div class="details --1">
-					<p class="more">+</p>
-				</div></a>
-				<a href="#"><div class="details --2">
-					<p class="more">+</p>
-				</div></a>
-				<a href="#"><div class="details --3">
-					<p class="more">+</p>
-				</div></a>
-				<a href="#"><div class="details --4">
-					<p class="more">+</p>
-				</div></a>
-				<a href="#"><div class="details --5">
-					<p class="more">+</p>
-				</div></a>
-				<a href="#"><div class="details --6">
-					<p class="more">+</p>
-				</div></a>
+			<!-- /div> -->
+		</section>
+		<section class="featuresContainer" id="carac">
+			<div class=featuresContains>
+				<div class="titleTypeContains"><h3 class="titleType">Les principales</h3></div>
+				<div class="titleFeatureContains"><h2 class="titleFeature">Caractéristiques</h2></div>
+				<div class="bikeFeatureContains">
+					<img src="../img/velo_2.png" class="bikeFeatureContains-img" alt="Vélos">
+					<a href="#"><div class="details --1">
+						<p class="more">+</p>
+					</div></a>
+					<a href="#"><div class="details --2">
+						<p class="more">+</p>
+					</div></a>
+					<a href="#"><div class="details --3">
+						<p class="more">+</p>
+					</div></a>
+					<a href="#"><div class="details --4">
+						<p class="more">+</p>
+					</div></a>
+					<a href="#"><div class="details --5">
+						<p class="more">+</p>
+					</div></a>
+					<a href="#"><div class="details --6">
+						<p class="more">+</p>
+					</div></a>
+				</div>
+			</div>
+		</section>
+		<section class="presentationFixieContainer">
+			<div>
+				<div class="presentationFixieImageContainer1"><img class="presentationImage" src="../img/photo_situation_1.jpg" alt="Vélos"></div>
+				<div class="presentationFixieImageContainer2"><img class="presentationImage" src="../img/photo_situation_2.jpg" alt="Vélos"></div>
+				<div class="presentationFixieImageContainer3"><img class="presentationImage" src="../img/photo_situation_3.jpg" alt="Vélos"></div>
+				<div class="rectanglePresentationFixie"></div>
+				<p class="presentationTextFixie">Design esthétique et épuré, le fixie s’est vu retiré de tout accessoire superflus comme le dérailleur, les vitesses mais également les freins pour les puristes. <br /><br />Autre atout, sa légèreté. Deux fois moins lourd qu’un Vélib’ il est également facile à entretenir.
+				</p>
+			</div>
+		</section>
+		<section class="customContainer">
+			<div class="titleTypeContains  --bicyclettes"><h3 class="titleType">Des bicyclettes</h3></div>
+			<div class="titleFeatureContains --customisables"><h2 class="titleFeature">Customisables</h2></div>
+			<div class="bikeCustomContainer"><img class="bikeFeatureContains-img" src="../img/velo_2.png"></div>
+			<div class="customTextContains">
+				<p class="customTextContains-text">Fait sur mesure, le fixie vous est customisable à votre image et devient un véritable accessoire de mode.<br /><br />Vous pouvez choisir son style, sa couleur, ses accessoires, son cadre ou encore le guidon ou les pédales.</p>
+			</div>
+			<div class="rectangleCustom"></div>
+		</section>
+		<section class="accessoriesContainer">
+			<div class="titleTypeContains  --accessoires"><h3 class="titleType">Les accessoires</h3></div>
+			<div class="titleFeatureContains --indispensable"><h2 class="titleFeature">Indispensable</h2></div>
+			<div class="accesoriesContains">
+				<div class="accesoriesPhotoContains">
+					<img class="accesoriesPhotoContains-img" src="../img/sonnette.png" alt="Accesoires 1">
+					<h4>Sonnette</h4>
+					<div class="buttonBuy"><a class="buttunBuy-link" href="#">Acheter</a></div>
+				</div>
+				<div class="accesoriesPhotoContains">
+					<img class="accesoriesPhotoContains-img" src="../img/casque.png" alt="Accesoires 2">
+					<h4>Casque</h4>
+					<div class="buttonBuy"><a class="buttunBuy-link" href="#">Acheter</a></div>
+				</div>
+				<div class="accesoriesPhotoContains">
+					<img class="accesoriesPhotoContains-img" src="../img/antivol.png" alt="Accesoires 3">
+					<h4>Antivol</h4>
+					<div class="buttonBuy"><a class="buttunBuy-link" href="#">Acheter</a></div>
+				</div>
 			</div>
 		</div>
-	</section>
-	<section class="presentationFixieContainer">
-		<div>
-			<div class="presentationFixieImageContainer1"><img class="presentationImage" src="../img/photo_situation_1.jpg" alt="Vélos"></div>
-			<div class="presentationFixieImageContainer2"><img class="presentationImage" src="../img/photo_situation_2.jpg" alt="Vélos"></div>
-			<div class="presentationFixieImageContainer3"><img class="presentationImage" src="../img/photo_situation_3.jpg" alt="Vélos"></div>
-			<div class="rectanglePresentationFixie"></div>
-			<p class="presentationTextFixie">Design esthétique et épuré, le fixie s’est vu retiré de tout accessoire superflus comme le dérailleur, les vitesses mais également les freins pour les puristes. <br /><br />Autre atout, sa légèreté. Deux fois moins lourd qu’un Vélib’ il est également facile à entretenir.
-			</p>
-		</div>
-	</section>
-	<section>
-		<div>
-			<div>
-				<h3>Des vélos à</h3>
-				<h2>Customiser</h2>
-				<div><img src=""></div>
-			</div>
-		</div>
-	</section>
-	<section>
-		<div>
-			<div>
-				<h3>Les indispensables</h3>
-				<h2>Accesoires</h2>
-			</div>
-			<div>
-				<img src="" alt="Accesoires 1">
-				<h4>Title1</h4>
-				<span><a href="#">Acheter</a></span>
-			</div>
-			<div>
-				<img src="" alt="Accesoires 2">
-				<h4>Title2</h4>
-				<span><a href="#">Acheter</a></span>
-			</div>
-			<div>
-				<img src="" alt="Accesoires 3">
-				<h4>Title3</h4>
-				<span><a href="#">Acheter</a></span>
-			</div>
-		</div>
-	</section>
-	<section>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
-		<div><img src="" alt=""></div>
 	</section>
 	<footer>
 	</footer>
