--- a/index/index.html
+++ b/index/index.html
@@ -86,23 +86,57 @@
 			<div class="accesoriesContains">
 				<div class="accesoriesPhotoContains">
 					<img class="accesoriesPhotoContains-img" src="../img/sonnette.png" alt="Accesoires 1">
-					<h4>Sonnette</h4>
+					<h4 class="accessoriesTitle">Sonnette</h4>
+					<h5 class="price">25,00€</h5>
 					<div class="buttonBuy"><a class="buttunBuy-link" href="#">Acheter</a></div>
 				</div>
 				<div class="accesoriesPhotoContains">
 					<img class="accesoriesPhotoContains-img" src="../img/casque.png" alt="Accesoires 2">
-					<h4>Casque</h4>
+					<h4 class="accessoriesTitle">Casque</h4>
+					<h5 class="price">59,00€</h5>
 					<div class="buttonBuy"><a class="buttunBuy-link" href="#">Acheter</a></div>
 				</div>
 				<div class="accesoriesPhotoContains">
 					<img class="accesoriesPhotoContains-img" src="../img/antivol.png" alt="Accesoires 3">
-					<h4>Antivol</h4>
+					<h4 class="accessoriesTitle">Antivol</h4>
+					<h5 class="price">21,90€</h5>
 					<div class="buttonBuy"><a class="buttunBuy-link" href="#">Acheter</a></div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<footer>
-	</footer>
-</body>
+		</section>
+		<section class="footer">
+			<div class="FixieLogoFooter-Contains">
+				<img class="fixieLogoFooter" src="../img/Logo_Fixie_blanc.svg" alt="logo Fixie">
+			</div>
+			<div class="contactListContains --pos1">
+				<ul class="contacts">
+					<li class="contacts-item">A propos</li>
+					<li class="contacts-item">F.A.Q</li>
+					<li class="contacts-item">Livraison</li>
+					<li class="contacts-item">Presse</li>
+				</ul>
+			</div>
+			<div class="contactListContains --pos2">
+				<ul class="contacts">
+					<li class="contacts-item">Contact</li>
+					<li class="contacts-item">Blog</li>
+					<li class="contacts-item">Garantie</li>
+					<li class="contacts-item">Mention</li>
+				</ul>
+			</div>
+			<div class="reseauContainer">
+				<ul class="reseau">
+					<li class="reseauItem"><img src="../img/facebook.svg" alt="logo facebook"></li>
+					<li class="reseauItem"><img src="../img/twitter.svg"></li>
+					<li class="reseauItem"><img src="../img/instagram.svg"></li>
+				</ul>
+			</div>
+			<div>
+				<p>S'inscrire à la newsletter</p>
+				<form method="post">
+					<input type="text" name="" style="background: #30343F; border: 5px solid white;">
+				</form>
+			</div>
+		</section>
+	</body>
 </html>
