--- a/index/index.html
+++ b/index/index.html
@@ -131,12 +131,13 @@
 					<li class="reseauItem"><img src="../img/instagram.svg"></li>
 				</ul>
 			</div>
-			<div>
-				<p>S'inscrire à la newsletter</p>
-				<form method="post">
-					<input type="text" name="" style="background: #30343F; border: 5px solid white;">
+			<div class="newsLetter">
+				<p class="signText">S'inscrire à la newsletter</p>
+				<form class="newsletterForm" method="post">
+					<input class="newsLetterInput" type="text" value="Votre adresse mail">
+					<div>s'inscrire</div>
 				</form>
-			</div>
+			<div>
 		</section>
 	</body>
 </html>
