--- a/index/index.html
+++ b/index/index.html
@@ -131,13 +131,11 @@
 					<li class="reseauItem"><img src="../img/instagram.svg"></li>
 				</ul>
 			</div>
-			<div class="newsLetter">
-				<p class="signText">S'inscrire à la newsletter</p>
-				<form class="newsletterForm" method="post">
-					<input class="newsLetterInput" type="text" value="Votre adresse mail">
-					<div>s'inscrire</div>
-				</form>
-			<div>
+			<p class="signText">S'inscrire à la newsletter</p>
+			<form class="newsletterForm" method="post">
+				<input class="newsLetterInput" type="text" value="Votre adresse mail">
+				<a class="buttonSignIn-link"><p class="buttonSignIn">s'inscrire</p></a>
+			</form>
 		</section>
 	</body>
 </html>
