--- a/index/index.html
+++ b/index/index.html
@@ -16,9 +16,21 @@
 				<a class="logo" href="#"><img class="logo-img" alt="logo fixie" title="Logo Fixie" src="../img/Logo_Fixie.svg"></a>
 				<nav class='mainNavigation'>
 					<ul class="mainNavigation-list">
-						<a class="mainNavigation-link" href="#carac"><li class="mainNavigation-item1">Caractéristique</li></a>
-						<a class="mainNavigation-link" href="#"><li class="mainNavigation-item2">Customisation</li></a>
-						<a class="mainNavigation-link" href="#"><li class="mainNavigation-item3">Accessoires</li></a>
+							<li class="mainNavigation-item1">
+								<a class="mainNavigation-link" href="#carac">
+									Caractéristique
+								</a>
+							</li>
+							<li class="mainNavigation-item2">
+								<a class="mainNavigation-link" href="#carac">
+									Customisation
+								</a>
+							</li>
+							<li class="mainNavigation-item3">
+								<a class="mainNavigation-link" href="#carac">
+									Accessoires
+								</a>
+							</li>
 					</ul>
 				</nav>
 				<div class='overlay'></div>
