--- a/index/index.html
+++ b/index/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<link rel="icon" type="image/svg" href="favicon.svg" />
 		<link rel="stylesheet" type="text/css" href="../css/font.css">
 		<link rel="stylesheet" type="text/css" href="../css/reset.css">
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -16,21 +17,21 @@
 				<a class="logo" href="#"><img class="logo-img" alt="logo fixie" title="Logo Fixie" src="../img/Logo_Fixie.svg"></a>
 				<nav class='mainNavigation'>
 					<ul class="mainNavigation-list">
-							<li class="mainNavigation-item1">
-								<a class="mainNavigation-link" href="#carac">
-									Caractéristique
-								</a>
-							</li>
-							<li class="mainNavigation-item2">
-								<a class="mainNavigation-link" href="#carac">
-									Customisation
-								</a>
-							</li>
-							<li class="mainNavigation-item3">
-								<a class="mainNavigation-link" href="#carac">
-									Accessoires
-								</a>
-							</li>
+						<li class="mainNavigation-item1">
+							<a class="mainNavigation-link" href="#carac">
+								Caractéristique
+							</a>
+						</li>
+						<li class="mainNavigation-item2">
+							<a class="mainNavigation-link" href="#custom">
+								Customisation
+							</a>
+						</li>
+						<li class="mainNavigation-item3">
+							<a class="mainNavigation-link" href="#acces">
+								Accessoires
+							</a>
+						</li>
 					</ul>
 				</nav>
 				<div class='overlay'></div>
@@ -38,38 +39,62 @@
 			</div>
 		</header>
 		<section class="history">
-			<!-- <div class="historyContainer"> -->
 			<div class="bikeContainer"><img class="bikeContainer-img" src="../img/velo_1.png" alt="vélos"></div>
 			<div class="historyTextContainer"></div>
 			<p class="historyText">Autrefois associé aux coursiers, le fixie fait son grand retour et envahit les rues de nos grandes villes ces dernières années<br /> <br />
 			Symbole d’une nouvelle culture urbaine cool et trendy, le fixie permet d’expérimenter des sensations différentes à vélo.</p>
-			<!-- </div> -->
-			<!-- /div> -->
 		</section>
 		<section class="featuresContainer" id="carac">
 			<div class=featuresContains>
+				<div class="moreDetail --posDetail1">
+					<h5 class="titleDetail">Selle</h5>
+					<p class="textDetails">plusieurs modèles disponibles et couleur personnalisable</p>
+				</div>
+				<div class="moreDetail --posDetail2">
+					<h5 class="titleDetail">Guidon</h5>
+					<p class="textDetails">plusieurs formes disponibles et matériau personnalisable</p>
+				</div>
+				<div class="moreDetail --posDetail3">
+					<h5 class="titleDetail">Pneu</h5>
+					<p class="textDetails">plusieurs modèles disponibles et couleur personnalisable</p>
+				</div>
+				<div class="moreDetail --posDetail4">
+					<h5 class="titleDetail">Pédalier</h5>
+					<p class="textDetails">plusieurs modèles disponibles et couleur personnalisable</p>
+				</div>
+				<div class="moreDetail --posDetail5">
+					<h5 class="titleDetail">Cadre</h5>
+					<p class="textDetails">plusieurs tailles disponibles et couleur personnalisable</p>
+				</div>
 				<div class="titleTypeContains"><h3 class="titleType">Les principales</h3></div>
 				<div class="titleFeatureContains"><h2 class="titleFeature">Caractéristiques</h2></div>
 				<div class="bikeFeatureContains">
 					<img src="../img/velo_2.png" class="bikeFeatureContains-img" alt="Vélos">
-					<a href="#"><div class="details --1">
-						<p class="more">+</p>
-					</div></a>
-					<a href="#"><div class="details --2">
-						<p class="more">+</p>
-					</div></a>
-					<a href="#"><div class="details --3">
-						<p class="more">+</p>
-					</div></a>
-					<a href="#"><div class="details --4">
-						<p class="more">+</p>
-					</div></a>
-					<a href="#"><div class="details --5">
-						<p class="more">+</p>
-					</div></a>
-					<a href="#"><div class="details --6">
-						<p class="more">+</p>
-					</div></a>
+					<a href="#">
+						<div class="details --1">
+							<p class="more">+</p>
+						</div>
+					</a>
+					<a href="#">
+						<div class="details --3">
+							<p class="more">+</p>
+						</div>
+					</a>
+					<a href="#">
+						<div class="details --4">
+							<p class="more">+</p>
+						</div>
+					</a>
+					<a href="#">
+						<div class="details --5">
+							<p class="more">+</p>
+						</div>
+					</a>
+					<a href="#">
+						<div class="details --6">
+							<p class="more">+</p>
+						</div>
+					</a>
 				</div>
 			</div>
 		</section>
@@ -83,16 +108,16 @@
 				</p>
 			</div>
 		</section>
-		<section class="customContainer">
+		<section class="customContainer" id="custom">
 			<div class="titleTypeContains  --bicyclettes"><h3 class="titleType">Des bicyclettes</h3></div>
 			<div class="titleFeatureContains --customisables"><h2 class="titleFeature">Customisables</h2></div>
 			<div class="bikeCustomContainer"><img class="bikeFeatureContains-img" src="../img/velo_2.png"></div>
 			<div class="customTextContains">
-				<p class="customTextContains-text">Fait sur mesure, le fixie vous est customisable à votre image et devient un véritable accessoire de mode.<br /><br />Vous pouvez choisir son style, sa couleur, ses accessoires, son cadre ou encore le guidon ou les pédales.</p>
+				<p class="customTextContains-text">Fait sur mesure, le fixie est customisable à votre image et devient un véritable accessoire de mode.<br /><br />Vous pouvez choisir son style, sa couleur, ses accessoires, son cadre ou encore le guidon ou les pédales.</p>
 			</div>
 			<div class="rectangleCustom"></div>
 		</section>
-		<section class="accessoriesContainer">
+		<section class="accessoriesContainer" id="acces">
 			<div class="titleTypeContains  --accessoires"><h3 class="titleType">Les accessoires</h3></div>
 			<div class="titleFeatureContains --indispensable"><h2 class="titleFeature">Indispensable</h2></div>
 			<div class="accesoriesContains">
@@ -118,7 +143,7 @@
 		</section>
 		<section class="footer">
 			<div class="FixieLogoFooter-Contains">
-				<img class="fixieLogoFooter" src="../img/Logo_Fixie_blanc.svg" alt="logo Fixie">
+				<a href="#"><img class="fixieLogoFooter" src="../img/Logo_Fixie_blanc.svg" alt="logo Fixie"></a>
 			</div>
 			<div class="contactListContains --pos1">
 				<ul class="contacts">
@@ -145,7 +170,7 @@
 			</div>
 			<p class="signText">S'inscrire à la newsletter</p>
 			<form class="newsletterForm" method="post">
-				<input class="newsLetterInput" type="text" value="Votre adresse mail">
+				<input class="newsLetterInput" type="text" value="   Votre adresse mail">
 				<a class="buttonSignIn-link"><p class="buttonSignIn">s'inscrire</p></a>
 			</form>
 		</section>
