--- a/index/index.html
+++ b/index/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="icon" type="image/svg" href="favicon.svg" />
+		<link rel="icon" type="image/png" href="../img/favicon.png">
 		<link rel="stylesheet" type="text/css" href="../css/font.css">
 		<link rel="stylesheet" type="text/css" href="../css/reset.css">
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
